--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -27,7 +27,7 @@ $color-six: #FFFFFF;
     .main_content{
         display: grid;
         grid-template-rows: 100%;
-        grid-template-columns: 50px 120px 1fr;
+        grid-template-columns: 50px 150px 1fr 200px;
         background: linear-gradient($color-two, $color-four);
         .control{
             height: 100%;
@@ -75,11 +75,30 @@ $color-six: #FFFFFF;
             padding-top: 5px;
             align-items: center;
             .frame{
-                height: 100px;
-                width: 100px;
+                position: relative;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                height: 128px;
+                width: 128px;
                 border: 1px solid #000000;
-                border-radius: 10px;
                 margin-bottom: 5px;
+                .frame_canvas{
+                    position: absolute;
+                    left: 0;
+                    top: 0;
+                    z-index: 0;
+                    width: 128px;
+                    height: 128px;
+                    background: rgb(191, 188, 188);
+                }
+                .layer_one{
+                    position: absolute;
+                    left: 0;
+                    top: 0;
+                    z-index: 1;
+                    background: rgba(0, 0, 0, 0);
+                }
             }
             .add{
                 border: none;
@@ -122,7 +141,7 @@ $color-six: #FFFFFF;
                     z-index: 0;
                     width: 512px;
                     height: 512px;
-                    background: rgb(138, 138, 138);
+                    background: rgb(191, 188, 188);
                 }
                 .layer_one{
                     position: absolute;
@@ -132,7 +151,27 @@ $color-six: #FFFFFF;
                     background: rgba(0, 0, 0, 0);
                 }
             }
-            
+        }
+
+        .control_preview{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            border-left: 3px solid #000000;
+            .preview__block{
+                width: 95%;
+                height: 190px;
+                border: 1px solid #000000;
+                border-radius: 10px;
+                margin-top: 5px;
+            }
+            .fps{
+                margin-top: 5px;
+            }
+            .count_fps{
+                color: $color-six;
+                font-weight: bold;
+            }
         }
     }  
 }
